[package]
name = "meli-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = {version = "0.6.0-rc.1" }
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

uuid = { version = "1.0", features = ["serde", "v4"]}
tower-http = { version = "0.3.0", features = [ "trace"] }

diesel = { version = "2.0.0", features = ["postgres","extras"] } # extras{MUST HAVE} for chrono::DateTime<Local>/uuid
dotenvy = "0.15"

chrono = {version = "0.4.19"}


axum_database_sessions = {git = "https://github.com/AscendingCreations/AxumSessions",branch = "axum0.6"}
axum_sessions_auth={git = "https://github.com/AscendingCreations/AxumSessionsAuth",branch = "5.0"}
async-trait = "0.1.57"
anyhow = "1.0.58"
# thiserror = "1.0.32"