[package]
name = "meli-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = {version = "0.6.0-rc.1" }
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

uuid = { version = "1.0", features = ["serde", "v4"]}
tower-http = { version = "0.3.0", features = [ "trace","cors"] }

diesel = { version = "2.0.0", features = ["postgres","extras","r2d2","serde_json","numeric"] } # extras for chrono::DateTime<Local>/uuid
dotenvy = "0.15"
 
chrono = {version = "0.4.19"}

axum_session_middleware={ path = "../session_middleware" }
axum_session_authentication_middleware={path = "../session_authentication_middleware"}

async-trait = "0.1.57"
anyhow = "1.0.58"
# thiserror = "1.0.32"

rust-argon2 = "1.0"

cookie = { version = "0.16.0" }
bigdecimal={version = "0.3",features = ["serde"]}
random_color="0.6"

regex = "1.6.0"
email_address = "0.2.3"