[package]
name = "axum_session_authentication_middleware"
version = "0.1.0"
edition = "2021"
license = "MIT"
publish = false

[dependencies]
axum-core = "0.3.0-rc.1"
async-trait = "0.1.57"
anyhow = "1.0.60"
async-recursion = "1.0.0"
http = "0.2.8"
tower-layer = "0.3.1"
tower-service = "0.3.2"
futures = "0.3.23"
bytes = "1.2.1"
http-body = "0.4.5"
dashmap = "5.3.4"
chrono = { version = "0.4.20", features = ["clock", "serde", "std"] }
tokio = { version = "1.20.1", features = ["full"] }
serde = "1.0.144"
axum_session_middleware={ path = "../session_middleware" }
uuid = { version = "1.1.2", features = ["v4", "serde"] }
serde_json = "1.0.85"
tracing = "0.1.36"