[package]
name = "axum_session_middleware"
version = "0.1.0"
edition = "2021"
license = "MIT"
publish = false

[dependencies]
axum-core = "0.3.0-rc.1"
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
chrono = { version = "0.4.22", features = ["clock", "serde", "std"] }
tokio = { version = "1.20.1", features = ["full"] }
async-trait = "0.1.57"
tracing = "0.1.36"
thiserror = "1.0.32"
http-body = "0.4.5"
uuid = { version = "1.1.2", features = ["v4", "serde"] }
http = "0.2.8"
tower-layer = "0.3.1"
tower-service = "0.3.2"
sqlx = { version = "0.6.1", default-features = false, features = [
    "chrono",
    "uuid",
], optional = true }
cookie = { version = "0.16.0", features = ["percent-encode", "private"] }
futures = "0.3.23"
bytes = "1.2.1"
dashmap = "5.3.4"
redis = { version = "0.21.6", features = ["tokio-comp"], optional = true }
anyhow = "1.0.58"

